<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="end"
            android:layout_margin="@dimen/big_padding"
            android:src="@drawable/ic_delete" />

        <EditText
            android:id="@+id/edit_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@drawable/drawable_edit_text_background"
            android:padding="6dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_word"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_height"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/wordTypeGroup"
            android:layout_margin="@dimen/big_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/uncategorized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uncategorized" />

            <RadioButton
                android:id="@+id/not_wont_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_wont_learn" />

            <RadioButton
                android:id="@+id/wont_learn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wont_learn" />

            <RadioButton
                android:id="@+id/learned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/learned" />
        </RadioGroup>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/purple_500"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</layout>
