<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@drawable/drawable_edit_text_background"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_article_name"
            android:inputType="text"
            android:minHeight="@dimen/min_height"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_transcript"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/big_padding"
            android:layout_weight="1"
            android:background="@drawable/drawable_edit_text_background"
            android:fontFamily="sans-serif-light"
            android:gravity="top"
            android:hint="@string/hint_article_transcript"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="6dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@drawable/drawable_edit_text_background"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_video_link"
            android:inputType="textUri"
            android:minHeight="@dimen/min_height"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:background="@color/purple_500"
            android:text="@string/button_save"
            android:textColor="@color/buttonLabel" />

    </LinearLayout>
</layout>
